--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   csv: ^5.0.1
   intl: ^0.17.0
   df: ^0.4.0-nullsafety.0
+  collection: ^1.16.0
+  data_table_2: ^2.3.6
 
 dev_dependencies:
   flutter_test:
