--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   file_picker: ^5.0.1
-  test: ^1.21.4
   csv: ^5.0.1
   intl: ^0.17.0
-  df: ^0.4.0-nullsafety.0
   collection: ^1.16.0
   data_table_2: ^2.3.6
+  df:
+    git: git@github.com:w2sv/df.git
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  test: ^1.21.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
