--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,5 +19,7 @@ jobs:
         run: flutter test --coverage
 
       - name: Upload coverage to codecov
-        run: curl -s https://codecov.io/bash
-        shell: bash
+        run: |
+          curl -Os https://uploader.codecov.io/latest/linux/codecov
+          chmod +x codecov
+          ./codecov -t ${{ secrets.CODECOV_TOKEN }}
