--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,8 @@ dependencies:
   intl: ^0.17.0
   collection: ^1.16.0
   data_table_2: ^2.3.6
-  df:
-    git: https://github.com/w2sv/df
   provider: ^6.0.3
+  koala: ^0.0.2
 
 dev_dependencies:
   flutter_test:
